# gpui-mono

./: .gitignore  README.md  index.html  index.tsx  metadata.json  package.json  vite.config.ts
crate/: Cargo.toml
crate/src/: lib.rs
crate/themes/: graphyn.json  zinc.json
docs/: component-specs.md  shadcn-zinc-theme.md  tailwind-gpui-mapping.md
